--- a/Practica 1/Untitled.ipynb
+++ b/Practica 1/Untitled.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora haremos un programa de prueba para mostrar las comparaciones de las predicciones con nuestra implementacion del algoritmo y una mas profesional que es SKLEARN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
