Empezado el notebook con regresion logistica

--- a/FAAP2_1461_10/notebook_p2.ipynb
+++ b/FAAP2_1461_10/notebook_p2.ipynb
@@ -2,15 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "import Clasificador\n",
     "import EstrategiaParticionado\n",
     "from Datos import Datos\n",
     "from plotModel import plotModel\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from IPython.display import HTML, display\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Practica 2\n",
+    "\n",
+    "Vamos a realizar un analisis de los algoritmos de clasificacion implementados, para ello vamos a mostrar los porcentajes de error de nuestra implementacion contra la de Sklearn utlizando validacion cruzada. Tambien vamos a mostrar unas graficas donde se mostraran las zonas de clasificacion de cada clase. \n",
+    "\n",
+    "## Apartado 1\n",
+    "\n",
+    "### Vecinos Proximos"
    ]
   },
   {
@@ -21,6 +44,45 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apartado 2\n",
+    "\n",
+    "### Regresion Logistica\n",
+    "\n",
+    "##### Example1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "salida = \"<table><tr><th>C.Aprendizaje/Epocas</th><th>Nuestro</th><th>Sklearn</th></tr>\"\n",
+    "dataset = Datos('./ConjuntoDatos/example1.data')\n",
+    "encAtributos = preprocessing.OneHotEncoder(categorical_features=dataset.nominalAtributos[:-1], sparse=False)\n",
+    "X = encAtributos.fit_transform(dataset.datos[:, :-1])\n",
+    "Y = dataset.datos[:, -1]\n",
+    "estrategia = EstrategiaParticionado.ValidacionCruzada()\n",
+    "\n",
+    "\n",
+    "clasificador = Clasificador.ClasificadorRegresionLogistica(nEpoc=10,consApren=1)\n",
+    "error_media, error_std = clasificador.validacion(estrategia, dataset, clasificador,45)\n",
+    "\n",
+    "score = cross_val_score(clf, X, Y, cv=10)\n",
+    "error_media_sk_con_g = 1 - score.mean()\n",
+    "error_std_sk_con_g = score.std()\n",
+    "\n",
+    "salida + = \"<tr>\"\n",
+    "salida += \"<td>%.4f ± %.3f</td>\" % (error_media_sin_t,error_std_sin_t)\n",
+    "salida += \"<td>%.4f ± %.3f</td></tr>\" % (error_media_sk_sin_t,error_std_sk_sin_t)\n"
+   ]
   }
  ],
  "metadata": {
